Facts cleanup and tests
